ticketを使った引出、預入の導入成功

--- a/app/templates/profile.html
+++ b/app/templates/profile.html
@@ -7,4 +7,6 @@
 名前：{{user.name}}<br>
 ポイント：{{user.point}}<br>
 
+<button><a href="/ticket_create/{{ user.id }}">チケット発行</a></button>
+
 {% endblock %}
