--- a/app/templates/profile.html
+++ b/app/templates/profile.html
@@ -5,8 +5,11 @@
 <p>プロフィール</p>
 
 名前：{{user.name}}<br>
+チップ：{{user.chip}}<br>
 ポイント：{{user.point}}<br>
+<br>
 
 <button><a href="/ticket_create/{{ user.id }}">チケット発行</a></button>
-
+<button><a href="/exchange/{{ user.id }}">チップ交換</a></button>
+<button onclick="history.back()">戻る</button>
 {% endblock %}
