--- a/app/templates/ticket_create.html
+++ b/app/templates/ticket_create.html
@@ -14,11 +14,21 @@
         預入
     </label>
     <br>
-    <label for="point">ポイント：</label>
-        <input type="number" id="point" name="point" min="0" required>
+    ----------
+    <br>
+    <label>
+        <input type="radio" id="chip" name="category" value="chip" checked>
+        チップ
+        <input type="radio" id="point" name="category" value="point">
+        ポイント
+    </label>
+    <br>
+    <input type="number" id="value" name="value" min="0" required>
+    <br>
     <br>
     <label>
         <button type="submit">登録</button>
+        <button onclick="history.back()">戻る</button>
     </label>
   </form>
   
