ユーザ削除に確認画面を追加

--- a/app/templates/add_user.html
+++ b/app/templates/add_user.html
@@ -7,7 +7,7 @@
     <label for="name">ユーザー名</label>
     <input type="text" id="name" name="name" required>
     <br>
-    <label for="pw">誕生日(4桁)</label>
+    <label for="pw">パスワード</label>
     <input type="pw" id="pw" name="pw" required>
     <br>
     <button type="submit">新規登録</button>
