--- a/app/templates/ticket_create.html
+++ b/app/templates/ticket_create.html
@@ -27,7 +27,7 @@
     <br>
     <br>
     <label>
-        <button type="submit">登録</button>
+        <button type="submit">発行</button>
         <button onclick="history.back()">戻る</button>
     </label>
   </form>
