--- a/app/templates/add_user.html
+++ b/app/templates/add_user.html
@@ -4,7 +4,7 @@
 {% block content %}
 <h1>ユーザー登録</h1>
 <form method="POST">
-    <label for="name">ユーザー名</label>
+    <label for="name">フルネーム</label>
     <input type="text" id="name" name="name" required>
     <br>
     <label for="pw">パスワード</label>
