--- a/app/templates/ranking.html
+++ b/app/templates/ranking.html
@@ -34,6 +34,7 @@
                     </form>
                 </th>
             {% endif %}
+            <th>{{ user.last_login }}</th>
         </tr>
     {% endfor %}
 </table>
