--- a/app/templates/ticket_receive.html
+++ b/app/templates/ticket_receive.html
@@ -4,7 +4,7 @@
 {% block content %}
 <p>チケット受付ページ</p>
 
-名前：{{ name }}
+発行者：{{ name }}
 <br>
 {% if ticket.type == "withdrawal" %}
     <p>type:引出</p>
@@ -26,6 +26,8 @@
     {% endif %}
 
 {% elif ticket.type == "deposit" %}
+    <p>type:預入</p>
+
     {% if ticket.category == "chip" %}
         <p>
         [チップ変動]<br>
@@ -41,6 +43,11 @@
         {{ user.point + ticket.value }}
         </p>
     {% endif %}
+{% elif ticket.type == "add_user" %}
+    <p>type:ユーザ追加</p>
+    =================<br>
+    名前：{{ ticket.category }}<br>
+    =================<br>
 {% endif %}
 
 <form action="{{ url_for('ticket_receive', id=ticket.id) }}" method="POST" style="display:inline;">
