月初めボーナスの実装。チケット化

--- a/app/templates/ranking.html
+++ b/app/templates/ranking.html
@@ -2,7 +2,7 @@
 {% block title %}ランキングページ{% endblock %}
 
 {% block content %}
-<h1>ランキング</h1>
+<h1>チップランキング</h1>
 
 <h3><a href="/profile/{{ current_user.id }}">マイページ</a></h3>
 {% if current_user.id == 1 %}
