--- a/app/templates/profile.html
+++ b/app/templates/profile.html
@@ -11,5 +11,5 @@
 
 <button><a href="/ticket_create/{{ user.id }}">チケット発行</a></button>
 <button><a href="/exchange/{{ user.id }}">チップ交換</a></button>
-<button onclick="history.back()">戻る</button>
+<button onclick="window.location.href='/ranking'">戻る</button>
 {% endblock %}
