--- a/app/templates/ticket_create.html
+++ b/app/templates/ticket_create.html
@@ -31,7 +31,7 @@
     <br>
     <br>
     <label>
-        <button type="submit">発行</button>
+        <button type="submit">送信</button>
         <button onclick="window.location.href='/profile/{{ user.id }}'">戻る</button>
     </label>
   </form>
