--- a/app/templates/delete_user.html
+++ b/app/templates/delete_user.html
@@ -8,4 +8,5 @@
 <form action="{{ url_for('delete_user', id=user.id) }}" method="POST" style="display:inline;">
     <button type="submit">削除</button>
 </form>
+<button onclick="window.location.href='/ranking'">戻る</button>
 {% endblock %}
