--- a/app/templates/add_user.html
+++ b/app/templates/add_user.html
@@ -7,6 +7,9 @@
     <label for="name">フルネーム</label>
     <input type="text" id="name" name="name" required>
     <br>
+    <label for="username">user name</label>
+    <input type="text" id="username" name="username" required>
+    <br>
     <label for="pw">パスワード</label>
     <input type="pw" id="pw" name="pw" required>
     <br>
