--- a/app/templates/ticket_all.html
+++ b/app/templates/ticket_all.html
@@ -43,5 +43,5 @@
         {% endfor %}
     </table>
 {% endif %}
-<a href="/ranking">ランキング</a>
+<button onclick="window.location.href='/ranking'">戻る</button>
 {% endblock %}
