--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -4,8 +4,8 @@
 {% block content %}
 <h1>ログイン</h1>
 <form method="POST">
-    <label for="name">ユーザー名</label>
-    <input type="text" id="name" name="name" required>
+    <label for="username">ユーザー名</label>
+    <input type="text" id="username" name="username" required>
     <br>
     <label for="pw">パスワード</label>
     <input type="pw" id="pw" name="pw" required>
