--- a/app/templates/ticket_receive.html
+++ b/app/templates/ticket_receive.html
@@ -65,7 +65,7 @@
 <form action="{{ url_for('delete_ticket', id=ticket.id) }}" method="POST" style="display:inline;">
     <button type="submit">チケット削除</button>
 </form>
-<button onclick="window.location.href='/ranking'">戻る</button>
+<button onclick="window.location.href='/ticket_all'">戻る</button>
 
 
 {% endblock %}
