--- a/app/templates/change_user_name.html
+++ b/app/templates/change_user_name.html
@@ -4,7 +4,7 @@
 {% block content %}
 <form method="POST">
     <h1>名前変更ページ</h1>
-    旧現在：{{user.name}}<br>
+    旧名前：{{user.name}}<br>
     <label for="name">新名前：</label>
     <input type="name" id="name" name="name" required>
     <br>
