--- a/app/templates/profile_view.html
+++ b/app/templates/profile_view.html
@@ -7,6 +7,7 @@
 名前：{{user.name}}<br>
 チップ：{{user.chip}}<br>
 ポイント：{{user.point}}<br>
+<button onclick="window.location.href='/ranking'">戻る</button>
 
 <p>===[Log]===</p>
 
