--- a/app/templates/ticket_receive.html
+++ b/app/templates/ticket_receive.html
@@ -60,7 +60,7 @@
     <p>type:交通費ボーナス</p>
     =================<br>
     名前：{{ ticket.category }}<br><!--name表示-->
-    chip：{{ ticket.value }} <br>
+    point：{{ ticket.value }} <br>
     =================<br>
 {% endif %}
 
