--- a/app/templates/ranking.html
+++ b/app/templates/ranking.html
@@ -4,7 +4,7 @@
 {% block content %}
 <h1>チップランキング</h1>
 
-<h3><a href="/profile/{{ current_user.id }}">マイページ</a> - <a href="/logout">ログアウト</a></h3>
+<h3><a href="/profile/{{ current_user.id }}">マイページ</a> - <a href="/logout">ログアウト</a> - <a href="/calendar">開催日程表</a></h3>
 {% if current_user.id == 1 %}
     <a href="/ticket_all">チケット一覧</a> <br>
     <p>
