--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -4,12 +4,17 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="{{url_for('static',filename='css/sample.css')}}">
+    <link rel="stylesheet" href="{{url_for('static',filename='css/no_style.css')}}">
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script><!--profile.htmlの折れ線グラフ用のjsライブラリ chart.js-->
     <title>Document</title>
 </head>
 <body>
-    {% block content %}
-    {% endblock %}
+    <!--
+    <img src="/static/images/background.png" class="background">
+    -->
+    <div class="content">
+        {% block content %}
+        {% endblock %}
+    </div>
 </body>
 </html>
