base.html documentをつばきちcasino に変更

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="{{url_for('static',filename='css/no_style.css')}}">
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script><!--profile.htmlの折れ線グラフ用のjsライブラリ chart.js-->
-    <title>Document</title>
+    <title>つばきちcasino</title>
 </head>
 <body>
     <!--
