ハンバーガーメニュー追加(左側占有してて視認性ダメ)

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="{{url_for('static',filename='css/style_card2.css')}}">
-    <script src="{{ url_for('static', filename='js/sample_card2.js')}}"></script>
+    <link rel="stylesheet" href="{{url_for('static',filename='css/style_card.css')}}">
+    <script src="{{ url_for('static', filename='js/sample_card.js')}}"></script>
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script><!--profile.htmlの折れ線グラフ用のjsライブラリ chart.js-->
     <title>つばきちcasino</title>
 </head>
