--- a/app/templates/ranking.html
+++ b/app/templates/ranking.html
@@ -42,6 +42,9 @@
             <a href="/export_logs">エクスポート Logs</a>
         {% endif %}
     </nav>
+
+    <!-- オーバーレイ(背景用) -->
+    <div id="overlay"></div>
     
     <div class="ranking-list">
         <table border = "1">
